tests/error/12_tuple.py
# Cannot call append on tuple
# Type Checker Error: Cannot use append on type tuple
a: (int) = (1,2,3)
a.append(4)
